# python-project-52

./: .env  .env_example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django-test.yml  linter-run.yml  test-coverage.yml  test.yml
docker/: docker-compose.yml
docker/services/nginx/: nginx.conf
docker/services/task-manager/: Dockerfile  docker-entrypoint.sh
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/marks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/marks/fixtures/: db_mark.json  db_mark_with_bond.json
task_manager/marks/migrations/: 0001_initial.py
task_manager/marks/tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/fixtures/: db_status.json
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_timestamp_status_date_joined.py  0003_alter_status_name.py
task_manager/statuses/tests/: test_Crud.py  test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/fixtures/: db_task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_performer.py  0003_alter_task_author_alter_task_description_and_more.py  0004_alter_task_author_alter_task_performer.py  0005_alter_task_performer.py  0006_bond_task_mark.py  0008_alter_task_executor.py  (+2 more)
task_manager/templates/: base.html  index.html  login.html  nav.html
task_manager/tests/: test_main_page.py
task_manager/userlist/: apps.py  models.py
task_manager/users/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
(+59 files in other folders)
