[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager web-app"
authors = ["Yuriy Kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-dotenv = "^0.21.0"
sqlparse = "^0.4.3"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
