[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager web-app"
authors = ["Yuriy Kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"
packages = [{include = "task-manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-dotenv = "^0.21.0"
sqlparse = "^0.4.3"
psycopg2 = "^2.9.5"
dj-database-url = "^1.0.0"
django-bootstrap4 = "^22.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
