[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager web-app"
authors = ["Yuriy Kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
python-dotenv = "^0.21.0"
sqlparse = "^0.4.3"
psycopg2-binary = "^2.9.5"
dj-database-url = "^0.5.0"
django-bootstrap4 = "^22.2"
coverage = "^6.5.0"
django-filter = "^22.1"
rollbar = "^0.16.3"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task_manager = "manage.py:main"